--- a/src/app/main/apps/e-commerce/product/product.component.html
+++ b/src/app/main/apps/e-commerce/product/product.component.html
@@ -149,8 +149,8 @@
 
                         <contacts></contacts>
 
-                        <br>
-                        <button class="mr-8 w-30-p" mat-raised-button matStepperNext type="button" color="accent">
+                  
+                        <button class="btn-next-contact mr-8 w-30-p" mat-raised-button matStepperNext type="button" color="accent">
                             Siguiente
                         </button>
 
