--- a/src/app/main/pages/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/main/pages/authentication/forgot-password/forgot-password.component.html
@@ -7,32 +7,39 @@
             <div class="logo">
                 <img src="assets/images/logos/fuse.svg">
             </div>
-            <div *ngIf="!emailSend" >
-            <div class="title">RECUPERAR MI CONTRASEÑA</div>
+            <div *ngIf="!emailSend">
+                <div class="title">RECUPERAR MI CONTRASEÑA</div>
 
-            <form name="forgotPasswordForm" [formGroup]="forgotPasswordForm" novalidate>
+                <form name="forgotPasswordForm" [formGroup]="forgotPasswordForm" novalidate>
 
-                <mat-form-field appearance="outline">
-                    <mat-label>Correo electrónico</mat-label>
-                    <input matInput formControlName="email">
-                    <mat-icon matSuffix class="secondary-text">mail</mat-icon>
-                    <mat-error *ngIf="forgotPasswordForm.get('email').hasError('required')">
-                        Email es requerido
-                    </mat-error>
-                    <mat-error *ngIf="forgotPasswordForm.get('email').hasError('email')">
-                        Ingrese un Email valido
-                    </mat-error>
-                </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Correo electrónico</mat-label>
+                        <input matInput formControlName="email">
+                        <mat-icon matSuffix class="secondary-text">mail</mat-icon>
+                        <mat-error *ngIf="forgotPasswordForm.get('email').hasError('required')">
+                            Email es requerido
+                        </mat-error>
+                        <mat-error *ngIf="forgotPasswordForm.get('email').hasError('email')">
+                            Ingrese un Email valido
+                        </mat-error>
+                    </mat-form-field>
 
-                <button mat-raised-button class="submit-button" color="accent"
-                        aria-label="SEND RESET LINK" [disabled]="forgotPasswordForm.invalid"
-                        (click)="forgotPassword()">
-                    ENVIAR CONTRASEÑA
-                </button>
-            </form>
-        </div>
 
-            <div  *ngIf="emailSend" class="title">Recuperación enviada al email: {{ email }}</div>
+                    <button *ngIf="loading" mat-raised-button class="submit-button" color="accent">
+                        <div class="spinner-loading" fxLayoutAlign="center center">
+                            <mat-spinner diameter="35"></mat-spinner>
+                        </div>
+                    </button>
+
+
+                    <button *ngIf="!loading" mat-raised-button class="submit-button" color="accent" aria-label="SEND RESET LINK"
+                        [disabled]="forgotPasswordForm.invalid" (click)="forgotPassword()">
+                        ENVIAR CONTRASEÑA
+                    </button>
+                </form>
+            </div>
+
+            <div *ngIf="emailSend" class="title">Recuperación enviada al email: {{ email }}</div>
 
             <div class="login" fxLayout="row" fxLayoutAlign="center center">
                 <a class="link" [routerLink]="'/pages/auth/login'">Regresar a inicar sesión</a>
