--- a/src/app/main/pages/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/main/pages/authentication/forgot-password/forgot-password.component.html
@@ -25,25 +25,28 @@
                     </mat-form-field>
 
 
-                    <button *ngIf="loading" mat-raised-button class="submit-button" color="accent">
-                        <div class="spinner-loading" fxLayoutAlign="center center">
-                            <mat-spinner diameter="35"></mat-spinner>
-                        </div>
-                    </button>
 
-
-                    <button *ngIf="!loading" mat-raised-button class="submit-button" color="accent" aria-label="SEND RESET LINK"
-                        [disabled]="forgotPasswordForm.invalid" (click)="forgotPassword()">
-                        ENVIAR CONTRASEÑA
-                    </button>
                 </form>
             </div>
 
             <div *ngIf="emailSend" class="title">Recuperación enviada al email: {{ email }}</div>
 
-            <div class="login" fxLayout="row" fxLayoutAlign="center center">
-                <a class="link" [routerLink]="'/pages/auth/login'">Regresar a inicar sesión</a>
-            </div>
+
+          
+                    <div *ngIf="loading" class="spinner-loading" fxLayoutAlign="center center">
+                        <mat-spinner diameter="35"></mat-spinner>
+                    </div>
+             
+
+
+                <button *ngIf="!loading" mat-raised-button class="submit-button" color="accent" aria-label="SEND RESET LINK"
+                    [disabled]="forgotPasswordForm.invalid" (click)="forgotPassword()">
+                    <span *ngIf="!emailSend">ENVIAR CONTRASEÑA</span> 
+                    <span *ngIf="emailSend">ENVIAR OTRA VEZ</span> 
+                </button>
+
+
+
 
         </div>
 
