--- a/src/app/main/pages/authentication/reset-password/reset-password.component.html
+++ b/src/app/main/pages/authentication/reset-password/reset-password.component.html
@@ -8,53 +8,60 @@
                 <img src="assets/images/logos/fuse.svg">
             </div>
 
-            <div class="title">RESET YOUR PASSWORD</div>
+            <div *ngIf="!passwordReset">
+
+         
+            <div class="title">RESETEAR CONTRASEÑA</div>
 
             <form name="resetPasswordForm" [formGroup]="resetPasswordForm" novalidate>
 
-                <mat-form-field appearance="outline">
-                    <mat-label>Email</mat-label>
-                    <input matInput formControlName="email">
-                    <mat-icon matSuffix class="secondary-text">mail</mat-icon>
-                    <mat-error *ngIf="resetPasswordForm.get('email').hasError('required')">
-                        Email is required
-                    </mat-error>
-                    <mat-error *ngIf="resetPasswordForm.get('email').hasError('email')">
-                        Please enter a valid email address
-                    </mat-error>
-                </mat-form-field>
 
                 <mat-form-field appearance="outline">
-                    <mat-label>Password</mat-label>
+                    <mat-label>Nueva contraseña</mat-label>
                     <input matInput type="password" formControlName="password">
                     <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
                     <mat-error>
-                        Password is required
+                        {{ getMesaggeErrorPassword() }}
                     </mat-error>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
-                    <mat-label>Password (Confirm)</mat-label>
+                    <mat-label>Nueva contraseña (Confirmar)</mat-label>
                     <input matInput type="password" formControlName="passwordConfirm">
                     <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
                     <mat-error *ngIf="resetPasswordForm.get('passwordConfirm').hasError('required')">
-                        Password confirmation is required
+                        Contraseña de confirmación es requerida
                     </mat-error>
                     <mat-error *ngIf="!resetPasswordForm.get('passwordConfirm').hasError('required') &&
                                        resetPasswordForm.get('passwordConfirm').hasError('passwordsNotMatching')">
-                        Passwords must match
+                        Contraseñas no coinciden
                     </mat-error>
                 </mat-form-field>
 
-                <button mat-raised-button class="submit-button" color="accent"
-                        aria-label="RESET MY PASSWORD" [disabled]="resetPasswordForm.invalid">
-                    RESET MY PASSWORD
+                <button  *ngIf="!loading"mat-raised-button class="submit-button" color="accent"
+                        aria-label="RESET MY PASSWORD" [disabled]="resetPasswordForm.invalid"
+                        (click)="resetPassword()">
+                    RESETEAR MI CONTRASEÑA
                 </button>
+
+                <div *ngIf="loading" class="spinner-loading" fxLayoutAlign="center center">
+                        <mat-spinner diameter="35"></mat-spinner>
+                    </div>             
+
             </form>
 
-            <div class="login" fxLayout="row" fxLayoutAlign="center center">
-                <a class="link" [routerLink]="'/pages/auth/login'">Go back to login</a>
+        </div>
+
+
+
+        <div *ngIf="passwordReset"  fxLayout="column" fxLayoutAlign="center center">
+                <div class="title">CONTRASEÑA CAMBIADA!</div>
+
+                <a class="link" [routerLink]="'/pages/auth/login'">Volver a inciar sesión</a>
             </div>
+
+
+            
 
         </div>
 
