--- a/src/app/main/pages/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/main/pages/authentication/forgot-password/forgot-password.component.html
@@ -45,6 +45,15 @@
                     <span *ngIf="emailSend">ENVIAR OTRA VEZ</span> 
                 </button>
 
+                <div class="separator">
+                        
+                    </div>
+
+            <div class="register" fxLayout="column" fxLayoutAlign="center center">
+
+                    <a class="link" [routerLink]="'/pages/auth/register'">Regresar a iniciar sesión</a>
+                </div>
+
 
 
 
