--- a/src/app/layout/speed-dial-fab/speed-dial-fab.component.scss
+++ b/src/app/layout/speed-dial-fab/speed-dial-fab.component.scss
@@ -1,13 +1,14 @@
 @import "src/@fuse/scss/fuse";
 
 .fab-container {
-    position: fixed;
-    bottom: 3%;
-    right: 115px;
+
     z-index: 100;
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
+    position: fixed;
+    bottom: 10px;
+    left: 90%;
   
     > div {
       display: flex;
@@ -31,13 +32,7 @@
     color:#878787
   }
 
-  @include media-breakpoint('xs') {
-    .fab-container {
-      right: 10px;
-  }
-
-  }
-
+  
 .spinner {
   margin-top: -15%;
 }
