--- a/src/app/main/apps/e-commerce/product/product.component.scss
+++ b/src/app/main/apps/e-commerce/product/product.component.scss
@@ -265,4 +265,50 @@
 }
 
 
+@import "src/@fuse/scss/fuse";
+
+.fab-container {
+    z-index: 100;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    position: fixed;
+    bottom: 10px;
+    left: 90%;
+
+  
+    > div {
+      display: flex;
+      flex-direction: column-reverse;
+      align-items: center;
+      margin-bottom: 5px;
+  
+      button {
+        margin-bottom: 17px;
+      }
+    }
+  }
+  
+  .fab-toggler {
+    float: right;
+    z-index: 100;
+  }
+
+  .icon-second {
+
+    color:#878787
+  }
+
+  @include media-breakpoint('xs') {
+    .fab-container {
+      right: 100%
+  }
+
+  }
+
+.spinner {
+  margin-top: -15%;
+}
+
+
 
