--- a/src/app/main/apps/e-commerce/products/products.component.scss
+++ b/src/app/main/apps/e-commerce/products/products.component.scss
@@ -71,6 +71,7 @@ e-commerce-products {
     }
 
     .products-table {
+        width: 100%;
         flex: 1 1 auto;
         border-bottom: 1px solid rgba(0, 0, 0, .12);
         overflow: auto;
