--- a/src/app/main/pages/authentication/forgot-password/forgot-password.component.scss
+++ b/src/app/main/pages/authentication/forgot-password/forgot-password.component.scss
@@ -69,3 +69,12 @@ forgot-password {
         }
     }
 }
+
+          .separator {
+    font-size: 15px;
+    font-weight: 600;
+    margin: 24px auto;
+    position: relative;
+    overflow: hidden;
+    width: 100px;
+}
