design event open and integration api

--- a/src/app/main/apps/contacts/contact-form/contact-form.component.html
+++ b/src/app/main/apps/contacts/contact-form/contact-form.component.html
@@ -50,6 +50,11 @@
                 </mat-form-field>
             </div>
 
+
+            <div fxLayout="row" fxLayoutAlign="start start">
+                <mat-slide-toggle class="slide-bottom" ppearance="outline" fxFlex formControlName="send_email">Enviar email</mat-slide-toggle>
+             </div>
+
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
                     <mat-label>Compañia</mat-label>
