design event open and integration api

--- a/src/app/main/pages/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/main/pages/authentication/forgot-password/forgot-password.component.html
@@ -8,7 +8,7 @@
                 <img src="assets/images/logos/fuse.svg">
             </div>
             <div *ngIf="!emailSend">
-                <div class="title">RECUPERAR MI CONTRASEÑA</div>
+                <div class="title">RESTABLECER CONTRASEÑA</div>
 
                 <form name="forgotPasswordForm" [formGroup]="forgotPasswordForm" novalidate>
 
@@ -41,7 +41,7 @@
 
                 <button *ngIf="!loading" mat-raised-button class="submit-button" color="accent" aria-label="SEND RESET LINK"
                     [disabled]="forgotPasswordForm.invalid" (click)="forgotPassword()">
-                    <span *ngIf="!emailSend">ENVIAR CONTRASEÑA</span> 
+                    <span *ngIf="!emailSend">ENVIAR A MI CORREO</span> 
                     <span *ngIf="emailSend">ENVIAR OTRA VEZ</span> 
                 </button>
 
@@ -51,7 +51,7 @@
 
             <div class="register" fxLayout="column" fxLayoutAlign="center center">
 
-                    <a class="link" [routerLink]="'/pages/auth/register'">Regresar a iniciar sesión</a>
+                    <a class="link" [routerLink]="'/pages/auth/login'">Ingresar con mi cuenta</a>
                 </div>
 
 
