--- a/src/app/main/pages/authentication/reset-password/reset-password.component.html
+++ b/src/app/main/pages/authentication/reset-password/reset-password.component.html
@@ -11,7 +11,7 @@
             <div *ngIf="!passwordReset">
 
          
-            <div class="title">RESETEAR CONTRASEÑA</div>
+            <div class="title">RESTABLECER CONTRASEÑA</div>
 
             <form name="resetPasswordForm" [formGroup]="resetPasswordForm" novalidate>
 
@@ -41,7 +41,7 @@
                 <button  *ngIf="!loading"mat-raised-button class="submit-button" color="accent"
                         aria-label="RESET MY PASSWORD" [disabled]="resetPasswordForm.invalid"
                         (click)="resetPassword()">
-                    RESETEAR MI CONTRASEÑA
+                    RESTABLECER MI CONTRASEÑA
                 </button>
 
                 <div *ngIf="loading" class="spinner-loading" fxLayoutAlign="center center">
@@ -56,7 +56,7 @@
 
         <div *ngIf="passwordReset"  fxLayout="column" fxLayoutAlign="center center">
                 <div class="title">CONTRASEÑA CAMBIADA!</div>
-                <a class="link" [routerLink]="'/pages/auth/login'">Volver a inciar sesión</a>
+                <a class="link" [routerLink]="'/pages/auth/login'">Volver a ingresar</a>
             </div>
    
         </div>
