--- a/src/app/main/pages/authentication/login/login.component.html
+++ b/src/app/main/pages/authentication/login/login.component.html
@@ -8,16 +8,16 @@
                 <img src="assets/images/logos/fuse.svg">
             </div>
 
-            <div class="title">INICIAR SESIÓN CON MI CUENTA</div>
+            <div class="title">INGRESAR CON MI CUENTA</div>
 
             <form name="loginForm" [formGroup]="loginForm" novalidate>
 
                 <mat-form-field appearance="outline">
-                    <mat-label>Email</mat-label>
+                    <mat-label>Correo electrónico</mat-label>
                     <input matInput formControlName="email">
                     <mat-icon matSuffix class="secondary-text">mail</mat-icon>
                     <mat-error *ngIf="loginForm.get('email').hasError('required')">
-                        Email es requerido
+                        Correo electrónico es requerido
                     </mat-error>
                     <mat-error
                         *ngIf="!loginForm.get('email').hasError('required') &&
@@ -27,7 +27,7 @@
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
-                    <mat-label>Password</mat-label>
+                    <mat-label>Contraseña</mat-label>
                     <input matInput type="password" formControlName="password">
                     <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
                     <mat-error>
@@ -42,20 +42,25 @@
                     </mat-checkbox>
 
                     <a class="forgot-password" [routerLink]="'/pages/auth/forgot-password'">
-                       Recuperar contraseña?
+                      Olvide mi contraseña
                     </a>
                 </div>
 
-                <button mat-raised-button color="accent" class="submit-button" aria-label="LOG IN"
+                <button *ngIf="!loading" mat-raised-button color="accent" class="submit-button" aria-label="LOG IN"
                     (click)="login()"
                     [disabled]="loginForm.invalid">
                     Iniciar sesión
                 </button>
 
+
+                <div *ngIf="loading" class="spinner-loading" fxLayoutAlign="center center">
+                    <mat-spinner diameter="45"></mat-spinner>
+                </div>
+
             </form>
 
             <div class="separator">
-                <span class="text">O</span>
+              
             </div>
 
             <!--
@@ -74,7 +79,7 @@
                -->
 
             <div class="register" fxLayout="column" fxLayoutAlign="center center">
-                <span class="text">Crear mi cuenta</span>
+                <span class="text">No tengo una cuenta</span>
                 <a class="link" [routerLink]="'/pages/auth/register'">Registrarme</a>
             </div>
 
