--- a/src/app/main/pages/authentication/register/register.component.html
+++ b/src/app/main/pages/authentication/register/register.component.html
@@ -8,7 +8,7 @@
                 <img src="assets/images/logos/fuse.svg">
             </div>
 
-            <div class="title">CREAR UNA CUENTA GRATIS</div>
+            <div class="title">REGISTRAR UNA CUENTA GRATIS</div>
 
             <form name="registerForm" [formGroup]="registerForm" novalidate>
 
@@ -23,11 +23,11 @@
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
-                    <mat-label>Email</mat-label>
+                    <mat-label>Correo electrónico</mat-label>
                     <input matInput formControlName="email">
                     <mat-icon matSuffix class="secondary-text">mail</mat-icon>
                     <mat-error *ngIf="registerForm.get('email').hasError('required')">
-                        Email es requerido
+                        Correo electrónico es requerido
                     </mat-error>
                     <mat-error *ngIf="registerForm.get('email').hasError('email')">
                         Ingrese email valido
@@ -35,7 +35,7 @@
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
-                    <mat-label>Password</mat-label>
+                    <mat-label>Contraseña</mat-label>
                     <input matInput type="password" formControlName="password">
                     <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
                     <mat-error>
@@ -44,7 +44,7 @@
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
-                    <mat-label>Password (Confirm)</mat-label>
+                    <mat-label>Contraseña (Confirmar)</mat-label>
                     <input matInput type="password" formControlName="passwordConfirm">
                     <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
                     <mat-error *ngIf="registerForm.get('passwordConfirm').hasError('required')">
@@ -64,18 +64,25 @@
                     <a href="#">terms and conditions</a>
                 </div>
                 -->
-                <button mat-raised-button color="accent" class="submit-button" aria-label="CREATE AN ACCOUNT"
+                <button *ngIf="!loading" mat-raised-button color="accent" class="submit-button" aria-label="CREATE AN ACCOUNT"
                         [disabled]="registerForm.invalid"
                         (click)="register()">
                     CREAR MI CUENTA
                 </button>
 
+                <div *ngIf="loading" class="spinner-loading" fxLayoutAlign="center center">
+                    <mat-spinner diameter="45"></mat-spinner>
+                </div>
+
             </form>
 
-            <div class="register" fxLayout="column" fxLayoutAlign="center center">
-                <span class="text">ya tienes una cuenta?</span>
-                <a class="link" [routerLink]="'/pages/auth/login'">Inciar sesión</a>
+            <div  class="register" fxLayout="column" fxLayoutAlign="center center">
+                <span class="text">ya tengo una cuenta</span>
+                <a class="link" [routerLink]="'/pages/auth/login'">Ingresar</a>
             </div>
+
+
+
 
         </div>
 
