--- a/src/app/main/apps/contacts/contact-form/contact-form.component.html
+++ b/src/app/main/apps/contacts/contact-form/contact-form.component.html
@@ -52,7 +52,7 @@
 
 
             <div fxLayout="row" fxLayoutAlign="start start">
-                <mat-slide-toggle class="slide-bottom" ppearance="outline" fxFlex formControlName="send_email">Enviar email</mat-slide-toggle>
+                <mat-slide-toggle class="slide-bottom" appearance="outline" fxFlex formControlName="send_email">Marcar email</mat-slide-toggle>
              </div>
 
             <div fxLayout="row" fxLayoutAlign="start start">
@@ -107,7 +107,7 @@
                 (click)="matDialogRef.close(['delete',contactForm])"
                 aria-label="Delete"
                 matTooltip="Delete">
-            DELETE
+            ELIMINAR
         </button>
 
         <button *ngIf="action !== 'edit'"
@@ -116,7 +116,7 @@
                 (click)="matDialogRef.close(contactForm)"
                 [disabled]="contactForm.invalid"
                 aria-label="SAVE">
-            ADD
+            AGREGAR
         </button>
 
         <button *ngIf="action === 'edit'"
@@ -125,7 +125,7 @@
                 (click)="matDialogRef.close(['save',contactForm])"
                 [disabled]="contactForm.invalid"
                 aria-label="SAVE">
-            SAVE
+            GUARDAR
         </button>
 
     </div>
