--- a/src/app/main/apps/e-commerce/product/product.component.html
+++ b/src/app/main/apps/e-commerce/product/product.component.html
@@ -194,20 +194,19 @@
 
                                     <div class="container">
 
-                                        <email-editor class="email-editor"></email-editor>
+                                        <campaigns></campaigns>
+                                     <!--
+
+                                     <email-editor class="email-editor"></email-editor>
+
+                                       --> 
                                     </div>
 
                                 </div>
 
                             </div>
 
-                            <div class="fab-container">
-                                <button (click)="sendEmailToInvited()" mat-fab class="fab-toggler" [disabled]="false">
-                                    <mat-icon>send</mat-icon>
-                                    <!---   <mat-spinner class="spinner" *ngIf="_contactsService.loadingContact"  diameter="35"></mat-spinner> -->
-                                </button>
-
-                            </div>
+ 
 
                             <!--
 
