--- a/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.scss
+++ b/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.scss
@@ -98,6 +98,14 @@ e-commerce-products {
     display: flex;
     place-content: flex-end;
     align-items: center;
+    
+}
+.fuse-widget-front {
+    width: max-content;
+}
+
+.fuse-widget-back {
+    width: max-content;
 }
 
 
